--- a/src/empenofacil/view/Contratos.fxml
+++ b/src/empenofacil/view/Contratos.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -13,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ContratosController">
+<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ContratosController">
     <children>
         <VBox fx:id="contratosV">
             <children>
@@ -47,6 +52,7 @@
                         </Label>
                         <Button mnemonicParsing="false" onAction="#cancelarContrato" text="Cancelar empeño" />
                         <Button mnemonicParsing="false" onAction="#clonarContrato" text="Reempeño" />
+                        <Button mnemonicParsing="false" onAction="#generarContrato" text="Generar Contrato" />
                      </children>
                   </HBox>
                         <TableView fx:id="contratos" prefHeight="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
