--- a/src/empenofacil/view/Comercializacion.fxml
+++ b/src/empenofacil/view/Comercializacion.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox spacing="5.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ComercializacionController">
+<VBox spacing="5.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.ComercializacionController">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="5.0">
          <children>
@@ -19,27 +24,29 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Label text="Desde" />
-            <DatePicker />
-            <Label text="Hasta" />
-            <DatePicker />
-            <Button mnemonicParsing="false" text="Buscar" />
-            <Button mnemonicParsing="false" text="Limpiar" />
-            <Button mnemonicParsing="false" text="Convertir" />
          </children>
       </HBox>
-      <TableView>
+      <TableView fx:id="tablaComercializacion">
         <columns>
-          <TableColumn editable="false" prefWidth="75.0" text="Nombre" />
-          <TableColumn editable="false" prefWidth="75.0" text="Descripción" />
-            <TableColumn editable="false" prefWidth="75.0" text="Avaluo" />
-            <TableColumn editable="false" prefWidth="75.0" text="Prestamo" />
-            <TableColumn prefWidth="75.0" text="Comercialización" />
+          <TableColumn fx:id="nombreid" editable="false" prefWidth="75.0" text="Nombre" />
+          <TableColumn fx:id="descripcionid" editable="false" prefWidth="75.0" text="Descripción" />
+            <TableColumn fx:id="comerid" prefWidth="75.0" text="Comercialización" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <VBox>
+         <children>
+            <HBox alignment="CENTER_LEFT" spacing="20.0">
+               <children>
+                  <Label text="Descripcion" HBox.hgrow="NEVER" />
+                  <TextArea fx:id="txtid" prefRowCount="4" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="guardarid" mnemonicParsing="false" onAction="#guardarDescripcion" text="Guardar" HBox.hgrow="NEVER" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
