--- a/src/empenofacil/view/Ventas.fxml
+++ b/src/empenofacil/view/Ventas.fxml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.VentasController">
+<VBox xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="empenofacil.controller.VentasController">
    <children>
       <HBox>
          <children>
@@ -16,7 +24,7 @@
                   <HBox alignment="CENTER_LEFT" spacing="20.0">
                      <children>
                         <Button fx:id="agregarab" mnemonicParsing="false" onAction="#abrirSeccionArticulos" text="Agregar Articulos" />
-                        <Button fx:id="cncelarb" mnemonicParsing="false" text="Cancelar" />
+                        <Button fx:id="cncelarb" mnemonicParsing="false" onAction="#restablecer" text="Restablecer" />
                         <HBox alignment="CENTER_LEFT" spacing="20.0" visible="false">
                            <children>
                               <Button mnemonicParsing="false" text="Agregar Articulos" />
